# open-interaction-intelligence

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_POLICY.md  Makefile  PHASE_STATUS.md  PROJECT_STATUS.md  README.md  SECURITY.md  SKILL.md  THIRD_PARTY_SOURCES.md  package.json  pyproject.toml
.github/: pull_request_template.md
agents/: accessibility-reviewer.md  accessibility-specialist.md  design-system-architect.md  evidence-provenance-agent.md  experience-architect.md  framework-engineer.md  governance-agent.md  implementation-engineer.md  information-architect.md  interaction-designer.md  originality-critic.md  performance-engineer.md  performance-reviewer.md  product-strategist.md  security-reviewer.md  source-researcher.md  ux-researcher.md  visual-director.md  visual-qa-agent.md  visual-quality-reviewer.md  workflow-simulator.md
connectors/: README.md
docs/: architecture.md  capability-matrix.md  component-authoring.md  effect-authoring.md  evaluation-methodology.md  framework-adaptation.md  pattern-authoring.md  recipe-authoring.md  release-process.md  research-methodology.md  source-review.md  threat-model.md
evals/: README.md
governance/: README.md
ii/: __init__.py  apprunner.py  atlas.py  bench.py  browser.py  cli.py  cli_v3.py  concepts.py  data.py  debt.py  evidence.py  findings.py  genome.py  graph.py  guardian.py  mcp.py  memory.py  originality.py  policy.py  recommend.py  repair.py  report.py  run.py  runtime.py  sources.py  states.py  studio.py  system.py  twin.py
ingestion/: README.md
interaction-intelligence/: README.md
interfacebench/: README.md  longitudinal-scenario.md  rubric.md
motif/: __init__.py  cli.py  completeness.py  doctor.py  install.py  jsonschema_min.py  rank.py  registry.py  scan.py  search.py  yaml_min.py
policies/: accessibility.yml  enterprise-ui.yml  marketing-ui.yml
product-intelligence/: README.md
providers/: README.md
registry/: INDEX.md
scanners/: __init__.py  dependency_scanner.py  license_scanner.py  secret_scanner.py  source_scanner.py
schemas/: assurance-evidence.schema.json  colour-system.schema.json  component.schema.json  (+29 more)
(+786 files in other folders)
