[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "motif"
version = "3.1.0"
description = "Motif: design judgment, interface engineering, secure components, assurance, and governance for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Motif contributors" }]
keywords = ["agent-skills", "claude-code", "design-systems", "interaction-design", "ui-ux", "accessibility", "web-performance", "application-security"]
dependencies = []  # core is intentionally dependency-free

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
browser = ["playwright>=1.40"]  # axe-core injected from CDN at runtime

[project.scripts]
motif = "ii.cli:main"
ii = "ii.cli:main"
oii = "ii.cli:main"

[tool.setuptools]
packages = ["ii", "motif", "scanners"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]
